[workspace]
resolver = "3"

members = [
    "zenith-build",

    "zenith-sandbox",

    "zenith",
    "zenith-core",
    "zenith-render",
    "zenith-rendergraph",
    "zenith-renderer",
    "zenith-asset",
]

[workspace.dependencies]
winit = "0.30.11"
wgpu = { version =  "25.0.0", features = ["naga-ir"] }
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.23", features = ["derive"] }
glam = "0.30"
anyhow = "1.0.98"
derive_more = { version = "2.0.1", features = ["full"] }
smallvec = "1.15"
hashbrown = "0.15.4"
foldhash = "0.1.5"
gltf = "1.4"
wgsl_bindgen = "0.20.0"
miette = "7.6.0"
naga_oil = "0.18.0"
include_absolute_path = "0.1.7"
derive_builder = "0.20.2"
parking_lot = "0.12"
seq-macro = "0.3.6"
image = "0.25"
bincode = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"
paste = "1.0.15"
pollster = "0.4"
puffin_http = "0.16.1"
profiling = { version = "1.0.17", features = ["profile-with-puffin"] }