[package]
name = "zenith-asset"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck.workspace = true
anyhow.workspace = true
derive_more.workspace = true
parking_lot.workspace = true
derive_builder.workspace = true
glam.workspace = true
serde = { workspace = true, features = ["derive"] }
image.workspace = true
gltf = "1.4"
bincode = { workspace = true, features = ["serde"] }
profiling.workspace = true
ash.workspace = true

zenith-core = { path = "../zenith-core" }