[package]
name = "zenith-core"
version = "0.1.0"
edition = "2021"
description = "Core module for Zenith"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
smallvec = { workspace = true }
hashbrown = { workspace = true }
foldhash = { workspace = true }
glam = { workspace = true }
derive_more.workspace = true
winit.workspace = true
memmap2.workspace = true
profiling.workspace = true
puffin_http.workspace = true