[package]
name = "zenith-render"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu.workspace = true
winit.workspace = true
anyhow.workspace = true
naga_oil.workspace = true
include_absolute_path.workspace = true
seq-macro.workspace = true
pollster.workspace = true
profiling.workspace = true

zenith-core = { path = "../zenith-core" }
zenith-asset = { path = "../zenith-asset" }
zenith-build = { path = "../zenith-build" }