[package]
name = "zenith-rendergraph"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
derive_more.workspace = true
log.workspace = true
derive_builder.workspace = true
profiling.workspace = true

zenith-core = { path = "../zenith-core" }
zenith-render = { path = "../zenith-render" }