[package]
name = "zenith-rhi"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38", features = ["std", "debug", "loaded"] }
ash-window = "0.13"
raw-window-handle = "0.6"
hassle-rs = "0.12"
rspirv-reflect = "0.9"
enumflags2 = "0.7"
winit = { workspace = true }
anyhow = { workspace = true }
profiling = { workspace = true }
derive_builder = { workspace = true }
memoffset = { workspace = true }
paste.workspace = true

zenith-core = { path = "../zenith-core" }
zenith-rhi-derive = { path = "../zenith-rhi-derive" }

[features]
default = ["validation"]
validation = []
