[package]
name = "zenith-sandbox"
version = "0.1.0"
edition = "2021"
description = "Sandbox application for Zenith engine"
license = "MIT"

[dependencies]
winit.workspace = true
log.workspace = true
anyhow.workspace = true
glam.workspace = true
profiling.workspace = true

zenith = { path = "../zenith" }