[package]
name = "zenith"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
paste.workspace = true
pollster.workspace = true
profiling.workspace = true
puffin_http.workspace = true

zenith-core = { path = "../zenith-core" }
zenith-asset = { path = "../zenith-asset" }
zenith-render = { path = "../zenith-render" }
zenith-renderer = { path = "../zenith-renderer" }
zenith-rendergraph = { path = "../zenith-rendergraph" }